syntax = "proto3";

package api;

message Question{

    message AnswerOptions{
        OpenOptions openOptions = 1;
        MultipleOptions multipleOptions = 2;
        repeated MatrixOptions matrixOptions = 3;
        repeated HideQuestion hideQuestion = 4;
    }

    message OpenOptions{
        string dataType = 1;
        string value = 2;
        int32 limit = 3;
    }

    message MultipleOptions{
        repeated string multipleOptions = 1;
        string selectedOption = 2;
    }

    message MatrixOptions{
        string text = 1;
        repeated string options = 2;
        string selectedOption = 3;
    }

    message HideQuestion{
        string selectedOption = 1;
        string question = 2;
    }

    message QuestionWithLanguage {
        string language = 1;
        string text = 2;
        AnswerOptions answerOptions = 3;
    }

    string id = 1;
    string type = 2;
    bytes image = 3;
    repeated QuestionWithLanguage questionWithLanguage = 4;

}

message QuestionID{
    string questionID = 1;
}

message SurveyID{
    string surveyID = 1;
}

message QuestionArray{
    repeated Question questions = 1;
}

message SurveyArray{
    repeated SurveyData surveys = 1;
}

message EmptySurvey{

}

message SurveyData{

    string id = 1;
    string description = 2;
    string type = 3;
    string study = 4;
    repeated Question questions = 5;
}


service Survey{
    rpc CreateSurvey (SurveyData) returns (SurveyData);
    rpc DeleteSurvey (SurveyID) returns (EmptySurvey);
    rpc GetSurvey (SurveyID) returns (SurveyData);
    rpc GetAllSurveys (EmptySurvey) returns (SurveyArray);

    rpc CreateQuestion (Question) returns (Question);
    rpc DeleteQuestion (QuestionID) returns (EmptySurvey);
    rpc GetQuestion (QuestionID) returns (Question);
    rpc GetAllQuestions (EmptySurvey) returns (QuestionArray);

}